--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 }
 
 #main .name {
-  background: linear-gradient(135deg, #87c2ff, #fff, #fff);
+  background: linear-gradient(150deg, #87c2ff, #a0c8d8, #fff, #fff);
 }
 
 #main .image {
