--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,22 @@ a {
   cursor: pointer;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.half-position {
+  transform: translate(-50%, -50%);
+}
+
 #nav_panel {
   position: fixed;
   top: 0;
@@ -89,6 +105,40 @@ a {
   height: 100%;
 }
 
-.half-position {
-  transform: translate(-50%, -50%);
+#about {
+  display: flex;
+  justify-content: center;
+  height: auto;
+}
+
+#about [xcontent] {
+  width: var(--content-width);
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#about h1{
+  text-align: center;
+  width: 750px;
+  margin-top: 4em;
+}
+
+#about [xlist]>[xbuild] {
+  flex: 1;
+  overflow: hidden;
+}
+
+
+#about [xlist="row"]>[xbuild] {
+  margin-top: 10em;
+}
+
+#about [xlist="row"] [xlist]>[xbuild]:first-child{
+  margin-top: 0;
+}
+
+#about [xlist="row"] [xlist]>[xbuild]{
+  margin-top: 3em;
 }
