--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,10 @@ a:hover {
   transform: rotateX(0deg);
 }
 
+#xbody {
+  background: #f0f0f0;
+}
+
 #nav_panel {
   position: fixed;
   top: 0;
@@ -49,7 +53,7 @@ a:hover {
   width: 100%;
   height: var(--nav_panel-height);
   z-index: 9999;
-  background: var(--accent);
+  background: #4a4a4a;
 }
 
 #nav_panel.transparent {
@@ -105,6 +109,36 @@ a:hover {
   text-decoration: none;
   display: flex;
   align-items: center;
+}
+
+#bodyContent {
+  max-width: 1024px;
+  margin: 0 auto;
+  height: auto;
+}
+
+#cards [xlist] {
+  gap: 10px;
+  margin-top: 32px;
+}
+
+#cards [xlist]>[xbuild] {
+  max-width: 200px;
+  min-width: 160px;
+  max-height: 250px;
+  background: white;
+  display: flex;
+  padding: 12px;
+  align-items: center;
+  flex-direction: column;
+}
+
+#cards [ximage] {
+  padding: 32px;
+}
+
+#cards [xtext] {
+  font-size: 2em;
 }
 
 #main [xbuild] {
