--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,19 @@
 :root {
   --accent-color: rgb(250, 76, 76);
   --nav_panel-height: 64px;
-  --content-width: 1024px;
   --logo-size: 48px;
   --section-margin: 256px;
+}
+
+:root {
+  --content-width: 100%;
+  --rows: 10;
+  --width: 1024px;
+  --row-gap: 0px;
+  --row-size: 1fr;
+  --column-gap: 0px;
+  --grid-width: var(--width);
+  --column-count: 14;
 }
 
 a {
@@ -59,6 +69,9 @@ a:hover {
 #nav_panel.transparent {
   background: none;
 }
+#nav_panel.transparent a{
+  color: var(--dark)!important;
+}
 
 #nav_panel #logo {
   width: var(--nav_panel-height);
@@ -85,7 +98,7 @@ a:hover {
   margin: auto;
   display: flex;
   flex-direction: row;
-  width: var(--content-width);
+  width: var(--width);
   overflow: hidden;
 }
 
@@ -105,7 +118,7 @@ a:hover {
   color: var(--light);
   padding: 0 16px;
   height: 100%;
-  font-weight: 300;
+  font-weight: 400;
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -174,7 +187,7 @@ a:hover {
 }
 
 #about [xcontent] {
-  width: var(--content-width);
+  width: var(--width);
   height: auto;
   display: flex;
   align-items: center;
@@ -248,6 +261,77 @@ a:hover {
 
 #footer {
   background: var(--grey-900, #101010);
+}
+
+[xbuild].grid {
+  height: 100%;
+  --grid-width: 100%;
+  --column-gap-count: calc(var(--column-count) - 1);
+  --column-width: calc((var(--grid-width) - var(--column-gap-count)*var(--column-gap))/var(--column-count));
+  --container-width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(var(--rows), var(--row-size));
+  grid-template-columns: calc((var(--container-width) - var(--content-width))/2) 1fr repeat(var(--column-count), minmax(0, var(--column-width))) 1fr calc((var(--container-width) - var(--content-width))/2);
+  grid-auto-rows: var(--row-size);
+  row-gap: var(--row-gap);
+  column-gap: var(--column-gap);
+}
+
+[xbuild].grid>[xbuild] {
+  position: relative;
+  grid-area: var(--position);
+  overflow: hidden;
+}
+
+#start {
+  row-gap: 10px;
+  column-gap: 20px;
+}
+
+.start_title {
+  --position: 3/7/7/12;
+  display: flex;
+  align-items: flex-end;
+}
+
+.start_title h1 {
+  font-size: 11vw;
+  line-height: 0.85em;
+}
+
+.start_description {
+  --position: 2/13/7/-3;
+  font-size: 1.5em;
+}
+
+.start_lab {
+  --position: 7/3/-2/7;
+  font-size: 4vw;
+  display:flex;
+  align-items: center;
+}
+
+.start_card1 {
+  --position: 7/7/-1/12;
+}
+
+.start_card1, .start_card2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.start_card1 [ximage] {
+  height: auto;
+}
+
+.start_card2 {
+  --position: 7/12/-1/-3;
+}
+
+.start_card2 [ximage] {
+  width: auto;
 }
 
 @media screen and (max-width: 1024px) {
